@@ -1,3 +1,9 @@
+2010-08-31  Andreas Kupries  <andreask@activestate.com>
+
+	* win/tcl.m4: Applied patch by Jeff fixing issues with the
+	manifest handling on Win64.
+	* win/configure: Regenerated.
+
 2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* unix/Makefile.in: add valgrind target
